Decision_Making file added

--- a/Python-Complete-Course/03-Data-Structures/Sets_Complete_Notes.ipynb
+++ b/Python-Complete-Course/03-Data-Structures/Sets_Complete_Notes.ipynb
@@ -346,6 +346,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "+ `len()` function to count length of a set\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_set = {1, 2, 3}\n",
+    "\n",
+    "print(len(my_set))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "+ `clear()` Method: Empties the set.\n"
    ]
   },
@@ -358,6 +384,13 @@
     "my_set.clear()\n",
     "print(my_set)  # Output: set()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
