formatted Decision Making File

--- a/Python-Complete-Course/03-Data-Structures/Decision_Making_Updated.ipynb
+++ b/Python-Complete-Course/03-Data-Structures/Decision_Making_Updated.ipynb
@@ -108,15 +108,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is greater than 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -135,17 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is not greater than 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 5\n",
     "if x > 10:\n",
@@ -164,17 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is exactly 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 10\n",
     "if x > 10:\n",
@@ -198,18 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are a minor\n",
-      "Passed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = 16\n",
     "\n",
@@ -238,17 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You have a dog\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pet = \"dog\"\n",
     "\n",
@@ -313,13 +272,13 @@
     "\n",
     "**Exercise 5:**\n",
     "\n",
-    "Using the variables num1 and num2, which are fed with user input (just like in the provided code), create a flow control structure that compares the values of the variables, and returns a result according to the case:\n",
+    "Using the variables num1 and num2, which are fed with user input, create a flow control structure that compares the values of the variables, and returns a result according to the case:\n",
     "\n",
-    "\"num1 is greater than num2\"\n",
+    "+ \"num1 is greater than num2\"\n",
     "\n",
-    "\"num2 is greater than num1\"\n",
+    "+ \"num2 is greater than num1\"\n",
     "\n",
-    "\"num1 and num2 are equal\"\n",
+    "+ \"num1 and num2 are equal\"\n",
     "\n",
     "You must display the value of the user input instead of num1 and num2.\n",
     "\n",
@@ -329,13 +288,23 @@
     "\n",
     "Create a conditional structure to check if a 16-year-old without a license can drive, and display the corresponding result on the screen:\n",
     "\n",
-    "\"You can drive\"\n",
-    "\n",
-    "\"You can't drive yet. You must be 18 years old and have a license\"\n",
-    "\n",
-    "\"You can't drive. You need to have a license\"\n",
+    "+ \"You can drive\"\n",
+    "+ \"You can't drive yet. You must be 18 years old and have a license\"\n",
+    "+ \"You can't drive. You need to have a license\"\n",
     "\n",
     "Use the code base already provided to set up the appropriate flow control structure and check those conditions.\n",
+    "```python\n",
+    "  age = 16\n",
+    "  \n",
+    "  has_license = False\n",
+    "\n",
+    "  \"You can drive\"\n",
+    "\n",
+    "  \"You can't drive yet. You must be 18 years old and have a license\"\n",
+    "\n",
+    "  \"You can't drive. You need to have a license\"\n",
+    "```\n",
+    "\n",
     "\n",
     "**Exercise 7:**\n",
     "\n",
@@ -343,15 +312,26 @@
     "\n",
     "Create a conditional structure to evaluate a candidate given these conditions, and display the corresponding message on the screen:\n",
     "\n",
-    "\"You meet the requirements to apply\"\n",
+    "+ \"You meet the requirements to apply\"\n",
+    "+ \"To apply, you need to know how to program in Python and speak French\"\n",
+    "+ \"To apply, you need to speak French\"\n",
+    "+ \"To apply, you need to know how to program in Python\"\n",
     "\n",
-    "\"To apply, you need to know how to program in Python and speak French\"\n",
+    "Use the code already provided to set up the appropriate flow control structure and check those conditions. **Evaluate a candidate who knows French, but does not know how to program in Python.**\n",
     "\n",
-    "\"To apply, you need to speak French\"\n",
+    " **Code:**\n",
+    "  ```python\n",
+    "    speak_french = True\n",
+    "    knows_python = False\n",
     "\n",
-    "\"To apply, you need to know how to program in Python\"\n",
+    "    \"You meet the requirements to apply\"\n",
     "\n",
-    "Use the code already provided to set up the appropriate flow control structure and check those conditions. Evaluate a candidate who knows French, but does not know how to program in Python.\n"
+    "    \"To apply, you need to know how to program in Python and speak French\"\n",
+    "\n",
+    "    \"To apply, you need to speak French\"\n",
+    "\n",
+    "    \"To apply, you need to know how to program in Python\"\n",
+    "```\n"
    ]
   },
   {
